--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.kosep.datasource.connection-test-query=SELECT 1
 
 # ERP_THEMOON1 ????? DB
 spring.themoon.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.themoon.datasource.jdbc-url=jdbc:sqlserver://emmsg.co.kr:33000;databaseName=ERP_THEMOON1
+spring.themoon.datasource.jdbc-url=jdbc:sqlserver://emmsg.co.kr:33000;databaseName=ERP_THEMOON
 spring.themoon.datasource.username=actaserp
 spring.themoon.datasource.password=erp@5020
 spring.themoon.datasource.connection-test-query=SELECT 1 
@@ -34,6 +34,15 @@ spring.hanyangs.datasource.jdbc-url=jdbc:sqlserver://emmsg.co.kr:33000;databaseN
 spring.hanyangs.datasource.username=actaselv
 spring.hanyangs.datasource.password=elv@5020
 spring.hanyangs.datasource.connection-test-query=SELECT 1 
+
+
+
+# ERP_THEMOON1 ????? DB
+spring.seongwoo.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.seongwoo.datasource.jdbc-url=jdbc:sqlserver://emmsg.co.kr:33000;databaseName=ERP_SWSPANEL
+spring.seongwoo.datasource.username=actaserp
+spring.seongwoo.datasource.password=erp@5020
+spring.seongwoo.datasource.connection-test-query=SELECT 1 
 
 
 #MyBatis ??
